fixed search button being hidden behind bottom nav bar.

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   background-color: #181818;
   color: white;
   margin: 0;
+  min-height: 100vh;
 }
 a {
   text-decoration: none;
